# langchain-skills-adapters

./: .justfile  CHANGELOG.md  CONTRIBUTING.md  README.md  cliff.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  dynamic_tool_registration.py  middleware_usage.py  tool_usage.py
examples/browser-skills/web-link-crawler/: SKILL.md
examples/browser-skills/web-page-summarizer/: SKILL.md
examples/browser-skills/web-search-and-browse/: SKILL.md
examples/skills/my-skill/: SKILL.md
src/langchain_skills_adapters/: __init__.py
src/langchain_skills_adapters/core/: __init__.py  base.py  loader.py
src/langchain_skills_adapters/middleware/: __init__.py  skills_middleware.py
src/langchain_skills_adapters/tools/: __init__.py  skills_tool.py
tests/: conftest.py
tests/core/: test_base.py  test_loader.py
tests/middleware/: test_skills_middleware.py
tests/static/skills/tool-skill/: SKILL.md
tests/tools/: test_skills_tool.py
